# ai-trading-bot

./: .env.example  .gitignore  README.md  hackathon_strategy_brief.docx  pyproject.toml  state.sqlite
backtest/: __init__.py  baselines.py  metrics.py  prompt_eval.py  runner.py  walk_forward.py
config/: strategy.yaml
contracts/: foundry.toml
contracts/src/: AgentArtifacts.sol
docs/: ERC8004_NOTES.md
scripts/: dev_anvil.sh  pull_history.py  register_identity.py  verify_agent.py
src/agent/: __init__.py  main.py
src/agent/brain/: claude_code_strategist.py  llm_strategist.py  prompts.py
src/agent/chain/: __init__.py  _client.py  artifacts.py  explorer.py  identity.py  reputation.py  vault.py  verifier.py
src/agent/data/: __init__.py  indicators.py  kraken_feed.py
src/agent/exec/: __init__.py  base.py  kraken_live.py  paper.py
src/agent/kraken_mcp/: __init__.py  client.py  healthcheck.py  tools.py
src/agent/risk/: gate.py
src/agent/state/: __init__.py  models.py  store.py
tests/: conftest.py  test_backtest.py  test_baselines.py  test_chain_anvil.py  test_chain_artifacts.py  test_chain_explorer.py  test_chain_identity.py  test_chain_reputation.py  test_chain_vault.py  test_chain_verifier.py  test_claude_code_strategist.py  test_healthcheck.py  test_indicators.py  test_kraken_feed.py  test_kraken_live.py  test_kraken_tools.py  test_llm_strategist.py  test_main_loop.py  test_models.py  test_paper_exec.py  test_prompt_eval.py  test_pull_history.py  test_risk_gate.py  test_self_critique.py  test_store.py  test_walk_forward.py
workflows/: lessons.md
